--- a/.github/workflows/gitopia-mirror.yml
+++ b/.github/workflows/gitopia-mirror.yml
@@ -17,5 +17,5 @@ jobs:
         uses: gitopia/gitopia-mirror-action@v0.5.0
         with:
           gitopiaWallet: "${{ secrets.GITOPIA_WALLET }}"
-          remoteUrl: gitopia://fegg/Connect-Github
+          remoteUrl: "gitopia://fegg/Connect-Github"
           force: false
